<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.tatsuro.app.kakeinote.ui.details.Converters" />

        <variable
            name="viewModel"
            type="com.tatsuro.app.kakeinote.ui.details.DetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/main_padding"
        tools:context=".ui.details.DetailsFragment">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/expenseButton"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height"
            android:paddingHorizontal="@dimen/button_paddingHorizontal"
            android:backgroundTint="@color/translucent_red"
            android:onClick="@{() -> viewModel.onExpenseButtonClick()}"
            android:text="@string/expense"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:letterSpacing="@dimen/letterSpacing"
            app:cornerRadius="@dimen/roundButton_cornerRadius"
            app:layout_constraintEnd_toStartOf="@id/incomeButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/incomeButton"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height"
            android:paddingHorizontal="@dimen/button_paddingHorizontal"
            android:backgroundTint="@color/translucent_blue"
            android:onClick="@{() -> viewModel.onIncomeButtonClick()}"
            android:text="@string/income"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:letterSpacing="@dimen/letterSpacing"
            app:cornerRadius="@dimen/roundButton_cornerRadius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/expenseButton"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/timeGuideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/dateGuideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_long"
            android:layout_marginBottom="@dimen/vertical_margin_long"
            android:hint="@string/date"
            app:layout_constraintEnd_toEndOf="@id/dateGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expenseButton">

            <!-- onClickリスナーをソースコードで設定している。 -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                android:singleLine="true"
                app:date="@{viewModel.householdAccountBook.date}" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- TODO:色を変更したい。 -->
        <ImageButton
            android:id="@+id/prevDayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin_middle"
            android:onClick="@{() -> viewModel.onPrevDayButtonClick()}"
            android:contentDescription="@string/date_to_previous"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintBottom_toTopOf="@id/timeLayout"
            app:layout_constraintStart_toEndOf="@id/dateLayout"
            app:layout_constraintTop_toBottomOf="@id/expenseButton" />

        <!-- TODO:色を変更したい。 -->
        <ImageButton
            android:id="@+id/nextDayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin_middle"
            android:onClick="@{() -> viewModel.onNextDayButtonClick()}"
            android:contentDescription="@string/date_to_next"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            app:layout_constraintBottom_toTopOf="@id/timeLayout"
            app:layout_constraintStart_toEndOf="@id/prevDayButton"
            app:layout_constraintTop_toBottomOf="@id/expenseButton" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timeLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_long"
            android:layout_marginBottom="@dimen/vertical_margin_long"
            android:hint="@string/time"
            app:layout_constraintEnd_toEndOf="@id/timeGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateLayout">

            <!-- onClickリスナーをソースコードで設定している。 -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/timeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                android:singleLine="true"
                app:time="@{viewModel.householdAccountBook.time}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/typeLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_long"
            android:layout_marginBottom="@dimen/vertical_margin_long"
            android:hint="@string/type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timeLayout">

            <!-- onClickリスナーをソースコードで設定している。 -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/typeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                android:singleLine="true"
                app:incomeOrExpenseType="@{viewModel.householdAccountBook.type}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contentLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_long"
            android:layout_marginBottom="@dimen/vertical_margin_long"
            android:hint="@string/content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/typeLayout"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                android:text="@={viewModel.householdAccountBook.content}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountOfMoneyLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_long"
            android:layout_marginBottom="@dimen/vertical_margin_long"
            android:hint="@string/amount_of_money"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contentLayout"
            app:endIconMode="clear_text"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountOfMoneyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="0123456789"
                android:singleLine="true"
                android:text="@={Converters.intToString(viewModel.householdAccountBook.amountOfMoney)}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/memoLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_long"
            android:layout_marginBottom="@dimen/vertical_margin_long"
            android:hint="@string/memo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amountOfMoneyLayout"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/memoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:text="@={viewModel.householdAccountBook.memo}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/onceWriteButton"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/row_height"
            android:layout_marginStart="@dimen/horizontal_margin_middle"
            android:layout_marginEnd="@dimen/horizontal_margin_middle"
            android:text="@string/write"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            app:cornerRadius="@dimen/roundButton_cornerRadius"
            app:layout_constraintBottom_toTopOf="@id/deleteButton"
            app:layout_constraintEnd_toStartOf="@id/repeatWriteButton"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/repeatWriteButton"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/row_height"
            android:layout_marginStart="@dimen/horizontal_margin_middle"
            android:layout_marginEnd="@dimen/horizontal_margin_middle"
            android:text="@string/repeat_write"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            app:cornerRadius="@dimen/roundButton_cornerRadius"
            app:layout_constraintBottom_toTopOf="@id/deleteButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/onceWriteButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteButton"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/row_height"
            android:layout_marginStart="@dimen/horizontal_margin_middle"
            android:layout_marginEnd="@dimen/horizontal_margin_middle"
            android:background="@color/red"
            android:text="@string/delete"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            app:cornerRadius="@dimen/roundButton_cornerRadius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/copyButton"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/copyButton"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/row_height"
            android:layout_marginStart="@dimen/horizontal_margin_middle"
            android:layout_marginEnd="@dimen/horizontal_margin_middle"
            android:text="@string/copy"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            app:cornerRadius="@dimen/roundButton_cornerRadius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/saveButton"
            app:layout_constraintStart_toEndOf="@id/deleteButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/row_height"
            android:layout_marginStart="@dimen/horizontal_margin_middle"
            android:layout_marginEnd="@dimen/horizontal_margin_middle"
            android:text="@string/save"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            app:cornerRadius="@dimen/roundButton_cornerRadius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/copyButton" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/newWriteButtonsGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="onceWriteButton,repeatWriteButton"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/detailsButtonsGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="copyButton,saveButton,deleteButton"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
