<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.tatsuro.app.kakeinote.ui.edit.Converters" />

        <variable
            name="viewModel"
            type="com.tatsuro.app.kakeinote.ui.edit.EditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_padding"
        tools:context=".ui.edit.EditBodyFragment">

        <com.tatsuro.app.kakeinote.ui.widget.IncomeOrExpenseToggleButton
            android:id="@+id/incomeOrExpenseToggleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:incomeOrExpense="@={viewModel.householdAccountBookLiveData.incomeOrExpense}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/timeGuideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/dateGuideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_long"
            android:hint="@string/date"
            app:layout_constraintEnd_toEndOf="@id/dateGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/incomeOrExpenseToggleButton">

            <!-- onClickリスナーをソースコードで設定している。 -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                android:singleLine="true"
                app:date="@{viewModel.householdAccountBookLiveData.date}" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/prevDayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_longer"
            android:layout_marginEnd="@dimen/horizontal_margin_middle"
            android:background="@drawable/bg_gray_button"
            android:onClick="@{() -> viewModel.onPrevDayButtonClick()}"
            android:contentDescription="@string/date_to_previous"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
            app:tint="@color/white"
            app:layout_constraintBottom_toTopOf="@id/timeLayout"
            app:layout_constraintStart_toEndOf="@id/dateLayout"
            app:layout_constraintTop_toBottomOf="@id/incomeOrExpenseToggleButton" />

        <ImageButton
            android:id="@+id/nextDayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin_middle"
            android:background="@drawable/bg_gray_button"
            android:onClick="@{() -> viewModel.onNextDayButtonClick()}"
            android:contentDescription="@string/date_to_next"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            app:tint="@color/white"
            app:layout_constraintBottom_toTopOf="@id/timeLayout"
            app:layout_constraintStart_toEndOf="@id/prevDayButton"
            app:layout_constraintTop_toBottomOf="@id/incomeOrExpenseToggleButton" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timeLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_long"
            android:hint="@string/time"
            app:layout_constraintEnd_toEndOf="@id/timeGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateLayout">

            <!-- onClickリスナーをソースコードで設定している。 -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/timeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                android:singleLine="true"
                app:time="@{viewModel.householdAccountBookLiveData.time}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/typeLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_long"
            android:hint="@string/type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timeLayout">

            <!-- onClickリスナーをソースコードで設定している。 -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/typeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                android:singleLine="true"
                app:incomeOrExpenseType="@{viewModel.type}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contentLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_long"
            android:hint="@string/content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/typeLayout"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                android:text="@={viewModel.householdAccountBookLiveData.content}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountOfMoneyLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_long"
            android:hint="@string/amount_of_money"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contentLayout"
            app:endIconMode="clear_text"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountOfMoneyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="0123456789"
                android:singleLine="true"
                android:text="@={Converters.intToString(viewModel.amountOfMoney)}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/memoLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_long"
            android:hint="@string/memo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amountOfMoneyLayout"
            app:endIconMode="clear_text">

            <!-- layout_heightにwrap_contentを設定すると、テキストを削除したときに
                 EditTextの高さが変わってしまうため、固定サイズを設定する。 -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/memoEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/three_rows_text_height"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:minLines="3"
                android:text="@={viewModel.householdAccountBookLiveData.memo}" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
